# Unit-Tests-in-C

./: CMakeLists.txt  README.md  main.c  make.txt  unit_tests
common/: terminal.h
include/test/: assertion.h
output/unix/lib/: libunit_tests.dylib
outputs/debug/lib/: libunit_tests.dylib
outputs/lib/apple/: libunit_tests.dylib
src/test/: assertion.c
test/: assertion.c  assertion.h
unit_tests.dSYM/Contents/Resources/DWARF/: unit_tests
